6.2.0
- use ImageMagick to generate thumbnails

6.1.0 04-August 2018
- added system tray daemon (qtfm-tray), auto mount/play storage/optical
- drag-and-drop: add settings for modifiers
- inotify fixes
- fixed refresh of thumbnails
- added singleclick options in settings
- several ui fixes/enhancements
- added dbus session support
- various fixes/changes in settings
- various bug fixes
- added new build options
- added (icon) zoom support where missing
- proper support for multiple files in external applications
- advanced settings
- FreeBSD support
- bookmarks drop fixes
- mime fixes

6.0.3 11-June 2018
- fixed mount issue with optical in udisks

6.0.2 08-June 2018
- fixed another bookmark related bug

6.0.1 07-June 2018
- fixed broken bookmarks save
- fixed segfault if udisks not running

6.0.0 04-June 2018
- support for removable devices (udisks)
- basic trash support
- several bug/ui/build/mime fixes
- several UI enhancements/speed up
- improved desktop integration

5.9 25-May 2013
- fixed mime type handling
- fixed problem with opening qpdfview
- fixed application speed up, saving of properties much faster
- fixed missing button in about dialog

5.8 5-May 2013
- added support for Qt5 (application can be compiled with both Qt4 or Qt5)
- added *.desktop file based application selector
- added support for changing icon theme from settings
- added process dialog for custom actions. If custom action is executed, then dialog with action output popups. When action is finished, dialog is closed. This feature can be turned on/off in settings
- added mime type based default application configuration into the settings dialog
- added default mime app configuration file selection to settings (mimeapps.list/defaults.list)
- added default mime apps autogeneration from *.desktop files
- added about box
- modified icon view more mime types are recognized now
- modified more compact settings dialog

5.7 21-December 2012