@@ -1,5 +1,7 @@
 6.2.0
 - use ImageMagick to generate thumbnails
+- NetBSD support
+- dropped support for Qt4
 
 6.1.0 04-August 2018
 - added system tray daemon (qtfm-tray), auto mount/play storage/optical
